--- a/.github/workflows/run-1st-dm.yml
+++ b/.github/workflows/run-1st-dm.yml
@@ -9,9 +9,14 @@ jobs:
   run-python-script:
     runs-on: ubuntu-latest
     
+    permissions:
+      contents: write
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Setup Python
         uses: actions/setup-python@v4
